solc_mutator_ossfuzz_seed_corpus/test_sol/test_a1aab49887b2f6c55307de299d164cd4913282b699985ada0a9f121b2bcf9c2a_68ce76db361006e6add0bf8e5776f0f8f576326f_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  function (uint48, bool) external   el0;
  uint72 el1;
  int232 el2;
}
pragma solidity >= 0.0.0;
library L0 {
  function f0() internal   
  {
  }
  function f1(bool i0,bytes20 i1) public    returns(int64 o0,bytes23 o1)
  {
  }
  bytes7 public constant cons0 = bytes7(0xffffffffffffff);
  address payable public constant cons1 = payable(0x4B4EDcD36D5584C651EE765bcbcaad545d5Fe3ba);
  function f2(uint8 i0) external    returns(address o0)
  {
  }
  function f3(bytes memory i0,uint200 i1) public    returns(function () external   returns (address payable, string memory) o0)
  {
    address payable[] memory l0 = new address payable[](2);
  }
  event ev0(uint176  ep0);
  type T0 is bool;
}
library L1 {
  function f4(St0 memory i0) public    returns(St0[] memory o0)
  {
  }
  function f5(int136 i0) external   
  {
  }
  function f6(St0 memory i0) public    returns(bytes21 o0)
  {
  }
  modifier m0() 
  {
    revert(string("fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff6a8c376fb47cf1962a119026173f11d83997922fae4"));
    _;
  }
}
using L1 for uint;
library L2 {
  function f7() public    returns(bool o0)
  {
  }
  error er0(L0.T0 ep0);
  function f8(bytes memory i0) private    returns(bool o0)
  {
  }
  function f9(uint224 i0,int224 i1) external    returns(St0 memory o0)
  {
  }
  modifier m1() 
  {
    (bool l0) = f7();
    (bool l1) = f8(bytes("000000000000000000000000000000000000000000000000000000000000000000000000"));
    _;
  }
  function f10(function (uint152, bytes31, bool) external   returns (address, address, bytes memory) i0,function (string[] memory) external   returns (function () external   returns (function (bool, int248) internal   returns (bool, int248, string memory)), uint200) i1) internal    returns(St0 memory o0,uint24 o1,int176 o2)
  {
    (bool l0) = f7();
  }
  function f11() public  m1() 
  {
  }
  type T1 is int144;
  error er1(L0.T0 ep0, uint112 ep1);
  function f12() private  m1()  returns(function (uint184, address, function (address) external   returns (bytes19)) external   returns (int56) o0,address payable o1)
  {
  }
  function f13() public    returns(bytes memory o0)
  {
  }
  function f14(uint56 i0,string memory i1,int48 i2) private  m1()  returns(bytes memory o0,bytes20 o1)
  {
    delete o0;
  }
  using L0 for *;
}
using L0 for uint;
library L3 {
  function f15(address i0,function (bytes6) external   returns (function (int248, int248, bool) external   returns (uint200), int104, bool) i1) internal    returns(bool o0,function (uint216) external   returns (bytes memory, bool, St0 memory) o1,function () external   returns (St0 memory, string memory) o2)
  {
  }
  error er2(function () external   ep0);
}
library L4 {
  function f16() internal    returns(address o0)
  {
  }
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
library L5 {
  function f17(uint48 i0,function (bool[2] memory) external   returns (int232, int32) i1) internal   
  {
  }
  function f18(function (int256, int40, bool) external   returns (address payable) i0,bytes26[1] memory i1) private    returns(function () external   o0,function () external   returns (bytes8, bytes26) o1)
  {
  }
  type T2 is bytes21;
  event ev1(bytes19  ep0);
  function f19(L5.T2 i0) internal    returns(address payable[1] memory o0,int144 o1)
  {
    revert(string("ffffffffffffffffffffffffffffffffffffffffffffffffff"));
  }
}
using L5 for uint;
// ----
// TypeError 2582: (su0.sol:1655-1728): Internal type cannot be used for external function type.
